Pridanie <author> a <description> do .config modelu

--- a/src/jetbot_gazebo/models/jetbot/model.config
+++ b/src/jetbot_gazebo/models/jetbot/model.config
@@ -1,6 +1,15 @@
 <?xml version="1.0"?>
 <model>
-<name>jetbot</name>
-<version>1.0</version>
-<sdf version="1.5">jetbot.sdf</sdf>
+    <name>jetbot</name>
+    <version>1.0</version>
+    <sdf version="1.5">jetbot.sdf</sdf>
+
+	<author>
+		<name>Marek Pastor</name>
+		<email>mpastor2@student.umb.sk</email>
+	</author>
+
+	<description>
+		Riadenie mobilnej robotickej platformy JetBot pocitacom Jetson Nano.
+	</description>
 </model>
