--- a/src/jetbot_gazebo/package.xml
+++ b/src/jetbot_gazebo/package.xml
@@ -3,30 +3,29 @@
 <package format="3">
   <name>jetbot_gazebo</name>
   <version>0.0.0</version>
-  <description>JetBot Gazebo simulation</description>
+  <description>jetbot_gazebo</description>
   <maintainer email="mpastor2@student.umb.sk">mpastor2</maintainer>
   <license>Apache-2.0</license>
 
-  <depend>ros2launch</depend>
-  <depend>rclcpp</depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
+
+  <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>tf2_ros</depend>
-  <depend>diff_drive_controller</depend>
-  <depend>gz_ros2_control</depend>
+  <depend>ros2launch</depend>
   <depend>ros_gz</depend>
-  <depend>ros_gz_bridge</depend>
   <depend>ros_gz_sim</depend>
+  <depend>ros_gz_bridge</depend>
   <depend>controller_manager</depend>
-
-  <build_depend>ament_cmake</build_depend>
-  <build_depend>ament_cmake_ros</build_depend>
-  <build_depend>rosidl_typesupport_c</build_depend>
-  <build_export_depend>ament_cmake_ros</build_export_depend>
-  <exec_depend>ament_cmake</exec_depend>
+  <depend>gz_ros2_control</depend>
+  <depend>diff_drive_controller</depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
